force-app/main/default/objects/Season_Supplements__c/Season_Supplements__c.object-meta.xml
<CustomObject>
    <description>1/ in the Season Supplements Table there cannot be more than one non-main supplement overlapping with the Main Supplement
2/ Periods of Main Supplements entered in the Table for a certain destination cannot overlap</description>
    <label>Season Supplement</label>
    <nameField>
        <label>Supplement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Season Supplements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>