force-app/main/default/objects/Season_Supplements__c/fields/APTS_Market__c.field-meta.xml
<CustomField>
    <fullName>APTS_Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>