force-app/main/default/objects/Season_Supplements__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <label>Destination Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Destination Bundles</fullName>
                <isActive>false</isActive>
                <label>Destination Bundles</label>
            </value>
            <value>
                <fullName>Northern Hemisphere</fullName>
            </value>
            <value>
                <fullName>Southern Hemisphere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>