force-app/main/default/objects/Season_Supplements__c/fields/IsMainSupplement__c.field-meta.xml
<CustomField>
    <fullName>IsMainSupplement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will decide weather the current record is main supplement or not</description>
    <label>Is Main Supplement</label>
    <type>Checkbox</type>
</CustomField>