force-app/main/default/objects/Season_Supplements__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a Look Up field for Product Group</description>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Season Supplements</relationshipLabel>
    <relationshipName>Season_Supplements</relationshipName>
    <type>Lookup</type>
</CustomField>