force-app/main/default/objects/Season_Supplements__c/fields/SeasonSupplementProduct__c.field-meta.xml
<CustomField>
    <fullName>SeasonSupplementProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Season Supplement Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Season Supplements</relationshipLabel>
    <relationshipName>Season_Supplements</relationshipName>
    <type>Lookup</type>
</CustomField>