force-app/main/default/objects/Season_Supplements__c/fields/SupplementEndDate__c.field-meta.xml
<CustomField>
    <fullName>SupplementEndDate__c</fullName>
    <description>End date of the supplement</description>
    <label>Supplement End Date</label>
    <type>Date</type>
</CustomField>