force-app/main/default/objects/Season_Supplements__c/fields/SupplementStartDate__c.field-meta.xml
<CustomField>
    <fullName>SupplementStartDate__c</fullName>
    <description>Start date of the Supplement</description>
    <label>Supplement Start Date</label>
    <type>Date</type>
</CustomField>