force-app/main/default/objects/Season_Supplements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SupplementStartDate__c</columns>
    <columns>SupplementEndDate__c</columns>
    <columns>APTS_Market__c</columns>
    <columns>SeasonSupplementProduct__c</columns>
    <columns>IsMainSupplement__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Destination_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination_Location__c</field>
        <operation>equals</operation>
        <value>Northern Hemisphere</value>
    </filters>
    <label>All</label>
</ListView>